--- a/index.html
+++ b/index.html
@@ -1,64 +1,43 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Joe Josue</title>
-    <style>
-        body {
-            background-color: #fdfdfd;
-            color: #111;
-            font-family: "Courier New", Courier, monospace;
-            margin: 40px;
-            max-width: 700px;
-            line-height: 1.6;
-        }
-        h1, h2 {
-            font-weight: normal;
-            border-bottom: 1px solid #ddd;
-            padding-bottom: 5px;
-        }
-        a {
-            color: #0040ff;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        footer {
-            margin-top: 40px;
-            font-size: 0.9em;
-            color: #666;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ahensya</title>
+  <style>
+    body {
+      background-color: #0a0a0a;
+      color: #f5f5f5;
+      font-family: "Courier New", Courier, monospace;
+      max-width: 700px;
+      margin: 0 auto;
+      padding: 4rem 1.5rem;
+      line-height: 1.75;
+    }
+    h1 {
+      font-size: 2.25rem;
+      font-weight: bold;
+      margin-bottom: 2rem;
+    }
+    a {
+      color: #7fc8f8;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
+  <h1>This is Ahensya</h1>
+  <p>Ahensya is my personal practice. A strategic advisory studio powered by first-principles thinking, long-term partnerships, and AI agents. I work with founders, family offices, and ecosystem leaders to untangle complex decisions and move through inflection points with clarity.</p>
 
-<h1>Joe Josue</h1>
-<p>I work with founders, investors, and operators to solve complex strategic problems. When things need to move — clearly, quickly, and without noise — I get called in.</p>
+  <p>I started Ahensya after over a decade of experience in creative agencies, startup ventures, esports, and Web3. I’ve launched IPs, revived communities, built brands, grown ecosystems—and most importantly, I’ve made sense of ambiguity when stakes were high.</p>
 
-<h2>What I Do</h2>
-<p>I’ve built and sold companies. I’ve led token launches, repositioned IPs, and structured ecosystems from the ground up.</p>
-<p>My background spans venture studios, Web3 infrastructure, gaming, and fund strategy. I understand execution at every layer — product, narrative, capital, and culture.</p>
+  <p>Whether helping a founder raise, a studio rethink their GTM, or a Web3 protocol tighten its vision—I work best where high-context judgment meets execution. My clients are often sharp operators who need a thought partner, but not a full-time one. That’s where I come in.</p>
 
-<h2>How I Help</h2>
-<ul>
-    <li>Clarify vision and traction</li>
-    <li>Fix fractured teams, roadmaps, and assets</li>
-    <li>Reposition brands and protocols</li>
-    <li>Structure deals that unlock growth</li>
-</ul>
+  <p>This isn’t an agency. It’s not a collective. It’s a solo strategic layer built atop years of pattern recognition, cross-domain experience, and decision clarity. The output? Strategic plans, positioning frameworks, product or ecosystem strategy, boardroom comms, or just sharper thinking in the room.</p>
 
-<h2>Now</h2>
-<p>I run <strong>Ahensya</strong>, a strategy practice for high-context work with high-leverage people. Discreet, fast, built for results — not noise.</p>
-
-<h2>Contact</h2>
-<p>Email: <a href="mailto:joe@ahensya.com">joe@ahensya.com</a><br>
-Telegram: @joejosue</p>
-
-<footer>
-    Based in the Philippines. Available for consulting, advisory, and off-book deals.
-</footer>
-
+  <p>If this sounds like a fit, <a href="mailto:joe@ahensya.com">email me</a>. If it doesn’t, that’s fine too. There’s only one of me anyway.</p>
 </body>
 </html>
