--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
   </style>
 </head>
 <body>
-  <h1>This is Ahensya</h1>
-  <p>Ahensya is my personal practice. A strategic advisory studio powered by first-principles thinking, long-term partnerships, and AI agents. I work with founders, family offices, and ecosystem leaders to untangle complex decisions and move through inflection points with clarity.</p>
+  <h1>Welcome.</h1>
+  <p>Ahensya is my personal practice.</p> 
+  
+  <p>A strategic advisory studio powered by first-principles thinking, long-term partnerships, and AI agents. I work with founders, family offices, and ecosystem leaders to untangle complex decisions and move through crucial inflection points.</p>
 
   <p>I started Ahensya after over a decade of experience in creative agencies, startup ventures, esports, and Web3. I’ve launched IPs, revived communities, built brands, grown ecosystems—and most importantly, I’ve made sense of ambiguity when stakes were high.</p>
 
-  <p>Whether helping a founder raise, a studio rethink their GTM, or a Web3 protocol tighten its vision—I work best where high-context judgment meets execution. My clients are often sharp operators who need a thought partner, but not a full-time one. That’s where I come in.</p>
+  <p>Whether helping a founder raise, a studio rethink their GTM, or a Web3 protocol tighten its vision—I work best where high-context judgment meets execution. My clients are often sharp operators who need an aligned thought partner, or a  operation-ready fixer to act as their trusted extension. That’s where I come in.</p>
 
   <p>This isn’t an agency. It’s not a collective. It’s a solo strategic layer built atop years of pattern recognition, cross-domain experience, and decision clarity. The output? Strategic plans, positioning frameworks, product or ecosystem strategy, boardroom comms, or just sharper thinking in the room.</p>
 
