--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
 
   <p>This isn’t an agency. It’s not a collective. It’s a solo strategic layer built atop years of pattern recognition, cross-domain experience, and decision clarity. The output? Strategic plans, positioning frameworks, product or ecosystem strategy, boardroom comms, or just sharper thinking in the room.</p>
 
-  <p>If this sounds like a fit, <a href="mailto:joe@ahensya.com">email me</a>. If it doesn’t, that’s fine too. There’s only one of me anyway.</p>
+  <p>If this sounds like a fit,email me at: <a href="mailto:mail@joejosue.com">mail@joejosue.com</a> </p>
 </body>
 </html>
