--- a/index.html
+++ b/index.html
@@ -1,45 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ahensya</title>
   <style>
     body {
-      background-color: #0a0a0a;
-      color: #f5f5f5;
-      font-family: "Courier New", Courier, monospace;
-      max-width: 700px;
-      margin: 0 auto;
-      padding: 4rem 1.5rem;
-      line-height: 1.75;
+      font-family: 'Courier New', Courier, monospace;
+      background-color: #111;
+      color: #eaeaea;
+      margin: 0;
+      padding: 3rem 1.5rem;
+      line-height: 1.6;
+      max-width: 640px;
     }
+
     h1 {
-      font-size: 2.25rem;
-      font-weight: bold;
-      margin-bottom: 2rem;
+      font-size: 2rem;
+      margin-bottom: 1.5rem;
     }
+
     a {
-      color: #7fc8f8;
+      color: #6eb5ff;
       text-decoration: none;
     }
+
     a:hover {
       text-decoration: underline;
+    }
+
+    @media (min-width: 768px) {
+      body {
+        padding: 5rem 4rem;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Welcome.</h1>
-  <p>Ahensya is my personal practice.</p> 
-  
-  <p>A strategic advisory studio powered by first-principles thinking, long-term partnerships, and AI agents. I work with founders, family offices, and ecosystem leaders to untangle complex decisions and move through crucial inflection points.</p>
+  <h1>Ahensya</h1>
 
-  <p>I started Ahensya after over a decade of experience in creative agencies, startup ventures, esports, and Web3. I’ve launched IPs, revived communities, built brands, grown ecosystems—and most importantly, I’ve made sense of ambiguity when stakes were high.</p>
+  <p><strong>Welcome.</strong><br>
+  Ahensya is my personal practice.</p>
 
-  <p>Whether helping a founder raise, a studio rethink their GTM, or a Web3 protocol tighten its vision—I work best where high-context judgment meets execution. My clients are often sharp operators who need an aligned thought partner, or a  operation-ready fixer to act as their trusted extension. That’s where I come in.</p>
+  <p>A strategic advisory studio powered by first-principles thinking, long-term partnerships, and AI agents. I work quietly with founders, family offices, and ecosystem leaders to untangle complex decisions and move through crucial inflection points.</p>
 
-  <p>This isn’t an agency. It’s not a collective. It’s a solo strategic layer built atop years of pattern recognition, cross-domain experience, and decision clarity. The output? Strategic plans, positioning frameworks, product or ecosystem strategy, boardroom comms, or just sharper thinking in the room.</p>
+  <p>This isn’t for everyone. I started Ahensya after more than a decade inside creative agencies, startups, esports orgs, and Web3 ecosystems—often as the operator asked to make sense of the fog and chart a way forward. I’ve launched IPs, revived brands, grown communities, managed treasury pivots, and steered orgs through high-stakes transitions.</p>
 
-  <p>If this sounds like a fit,email me at: <a href="mailto:mail@joejosue.com">mail@joejosue.com</a> </p>
+  <p>Most of my work stays off the record. Sometimes it’s helping a founder raise without a deck. Sometimes it’s reshaping an old org for a new era. Other times it’s auditing a token model, fixing a failing GTM, or helping a board see what their leadership team can’t say out loud.</p>
+
+  <p>My clients are sharp but stretched. They don’t need more noise—they need a thought partner who can match their context and add clarity. Someone who can plug in fast, get to the root of things, and help execute cleanly. That’s where I come in.</p>
+
+  <p>This isn’t an agency. It’s not a collective. It’s a solo strategic layer built atop years of cross-domain pattern recognition, judgment, and real operational work. The output? Strategic plans, narrative pivots, market design, founder comms, or just sharper thinking in the room.</p>
+
+  <p>If this resonates, <a href="mailto:hello@ahensya.com">email me</a></p>
+
 </body>
 </html>
