--- a/index.html
+++ b/index.html
@@ -1,38 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ahensya</title>
   <style>
     body {
-      font-family: 'Courier New', Courier, monospace;
-      background-color: #111;
-      color: #eaeaea;
-      margin: 0;
-      padding: 3rem 1.5rem;
-      line-height: 1.6;
-      max-width: 640px;
+      background-color: #0a0a0a;
+      color: #f5f5f5;
+      font-family: "Courier New", Courier, monospace;
+      max-width: 700px;
+      margin: 0 auto;
+      padding: 4rem 1.5rem;
+      line-height: 1.75;
     }
-
     h1 {
-      font-size: 2rem;
-      margin-bottom: 1.5rem;
+      font-size: 2.25rem;
+      font-weight: bold;
+      margin-bottom: 2rem;
     }
-
     a {
-      color: #6eb5ff;
+      color: #7fc8f8;
       text-decoration: none;
     }
-
     a:hover {
       text-decoration: underline;
-    }
-
-    @media (min-width: 768px) {
-      body {
-        padding: 5rem 4rem;
-      }
     }
   </style>
 </head>
