--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>Ahensya</title>
   <style>
     body {
-      background-color: #0a0a0a;
-      color: #f5f5f5;
-      font-family: "Courier New", Courier, monospace;
+      background-color: #fdfdfd;
+            color: #111;
+            font-family: "Courier New", Courier, monospace;
       max-width: 700px;
       margin: 0 auto;
       padding: 4rem 1.5rem;
