--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
   </style>
 </head>
 <body>
-  <h1>Ahensya</h1>
+ <h1>Welcome.</h1>
 
-  <p><strong>Welcome.</strong><br>
-  Ahensya is my personal practice.</p>
+<p><strong>Ahensya is my personal consulting practice.</strong></p>
 
-  <p>A strategic advisory studio powered by first-principles thinking, long-term partnerships, and AI agents. I work quietly with founders, family offices, and ecosystem leaders to untangle complex decisions and move through crucial inflection points.</p>
+<p>A strategic advisory powered by first-principles thinking, long-term partnerships network, and AI agents. I work discretely with founders, family offices, and ecosystem leaders to untangle stagnation and move through crucial inflection points.</p>
 
-  <p>This isn’t for everyone. I started Ahensya after more than a decade inside creative agencies, startups, esports orgs, and Web3 ecosystems—often as the operator asked to make sense of the fog and chart a way forward. I’ve launched IPs, revived brands, grown communities, managed treasury pivots, and steered orgs through high-stakes transitions.</p>
+<p>Not everyone's cup of tea, I started Ahensya after more than a decade inside founding creative agencies, startups, esports orgs, and crypto ecosystems—often as the founding operator tasked to will an opportunity from 0–1. Along the way, I’ve had two ventures acquired, contributed to multiple ecosystems as a mentor (and occasional angel), and led teams that shipped products across gaming, fintech, and Web3.</p>
 
-  <p>Most of my work stays off the record. Sometimes it’s helping a founder raise without a deck. Sometimes it’s reshaping an old org for a new era. Other times it’s auditing a token model, fixing a failing GTM, or helping a board see what their leadership team can’t say out loud.</p>
+<p>Most of my work as Ahensya stays off the record. I’ve been tapped by family offices to assess and package capital deployment opportunities. I've repositioned distressed brands aiming for a second life. Sometimes I broker overlooked assets or quietly connect the right buyer to a key product. Other times, I help convert idle assets into cash-flow plays, build new arms within existing businesses, or simply stand as a stakeholder’s no bullsh*t confidant through high-stakes decisions. The contexts vary—but the work always centers on clarity, leverage, and momentum.</p>
 
-  <p>My clients are sharp but stretched. They don’t need more noise—they need a thought partner who can match their context and add clarity. Someone who can plug in fast, get to the root of things, and help execute cleanly. That’s where I come in.</p>
+<p>My clients are sharp but stretched. They don’t need more noise—they need a thought partner who can match their context and add clarity. Someone who can plug in, get to the root of things, and help execute. That’s where I come in.</p>
 
-  <p>This isn’t an agency. It’s not a collective. It’s a solo strategic layer built atop years of cross-domain pattern recognition, judgment, and real operational work. The output? Strategic plans, narrative pivots, market design, founder comms, or just sharper thinking in the room.</p>
+<p>If you’re here, it’s likely because someone in your circle thought we should speak.</p>
 
-  <p>If this resonates, <a href="mailto:hello@ahensya.com">email me</a></p>
+<p>If this resonates, <a href="mailto:hello@ahensya.com">email me</a>.</p>
+
 
 </body>
 </html>
