--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
 
 <p>A strategic advisory powered by first-principles thinking, long-term partnerships network, and AI agents. I work discretely with founders, family offices, and ecosystem leaders to untangle stagnation and move through crucial inflection points.</p>
 
-<p>Not everyones cup of tea, I started Ahensya after more than a decade inside founding creative agencies, startups, esports orgs, and crypto ecosystems—often as the founding operator tasked to will an opportunity from 0–1. Along the way, I’ve had two ventures acquired, contributed to multiple ecosystems as a mentor (and occasional angel), and led teams that shipped products across gaming, fintech, and Web3.</p>
+<p>Not everyones cup of tea, I started Ahensya after more than a decade inside creative and production agencies, lean startups, esports orgs, and crypto ecosystems—often as the founding operator tasked to will an opportunity from 0–1. Along the way, I’ve had two ventures acquired, contributed to multiple ecosystems as a mentor (and occasional angel), and led teams that shipped products across gaming, fintech, and Web3.</p>
 
 <p>Most of my work as Ahensya stays off the record. I’ve been tapped by family offices to assess and package capital deployment opportunities. I've repositioned distressed brands aiming for a second life. Sometimes I broker overlooked assets or quietly connect the right buyer to a key product. Other times, I help convert idle assets into cash-flow plays, build new arms within existing businesses, or simply stand as a stakeholder’s no bullsh*t confidant through high-stakes decisions. The contexts vary—but the work always centers on clarity, leverage, and momentum.</p>
 
-<p>My clients are sharp but stretched. They don’t need more noise—they need a thought partner who can match their context and add clarity. Someone who can plug in, get to the root of things, and help execute. That’s where I come in.</p>
+<p>My clients are sharp but stretched. They don’t need more noise—they need a thought partner and executioner who can match their context and add clarity. Someone who can plug in, get to the root of things, and help execute. That’s where I come in.</p>
 
 <p>If you’re here, it’s likely because someone in your circle thought we should speak.</p>
 
-<p>If this resonates, <a href="mailto:hello@ahensya.com">email me</a>.</p>
+<p>If this resonates, <a href="mailto:mail@joejosue.com">email me</a>.</p>
 
 
 </body>
