--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 
 <p>Most of my work as Ahensya stays off the record. I’ve been tapped by family offices to assess and package capital deployment opportunities. I've repositioned distressed brands aiming for a second life. Sometimes I broker overlooked assets or quietly connect the right buyer to a key product. Other times, I help convert idle assets into cash-flow plays, build new arms within existing businesses, or simply stand as a stakeholder’s no bullsh*t confidant through high-stakes decisions. The contexts vary—but the work always centers on clarity, leverage, and momentum.</p>
 
-<p>My clients are sharp but stretched. They don’t need more noise—they need a thought partner and executioner who can match their context and add clarity. Someone who can plug in, get to the root of things, and help execute. That’s where I come in.</p>
+<p>My clients are sharp but stretched. They don’t need more noise—they need a thought partner and executioner who can match their context and add clarity. Someone who can plug in, get hands-on and to the root of things, and finally, execute. That’s where I come in.</p>
 
 <p>If you’re here, it’s likely because someone in your circle thought we should speak.</p>
 
-<p>If this resonates, <a href="mailto:mail@joejosue.com">email me</a>.</p>
+<p>If not, but this resonates, <a href="mailto:mail@joejosue.com">email me</a>.</p>
 
 
 </body>
