--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <p>My clients are sharp but stretched. They don’t need more noise, they need a thought partner and executioner who can match their context and add clarity. Someone who can plug in, get hands-on and to the root of things, and finally, execute. That’s where I come in.</p>
 
-<p>If you’re here, it’s likely because someone in your circle thought we should speak. If not, but this resonates, <a href="mailto:mail@joejosue.com">email me</a>.</p>
+<p>If you’re here, it’s likely because someone in your circle thought we should speak. If this resonates, <a href="mailto:mail@joejosue.com">email me</a>.</p>
 
 <p>-Joe J.</p>
 
