--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <p><strong>Ahensya is my personal advisory and contributor practice.</strong></p>
 
-<p>A high-context, hands-on practice founded on first-principles thinking, long-term partnerships network, and AI agents. I work discretely with founders, family offices, and ecosystem leaders to untangle stagnation and move through crucial inflection points.</p>
+<p>A high-context, hands-on firm built on first-principles thinking, long-term partnerships, and AI agents. I work discretely with founders, family offices, and ecosystem leaders to untangle stagnation and move through crucial inflection points.</p>
 
 <p>Not everyone's cup of tea, I started Ahensya after more than a decade founding creative and production agencies, lean startups, esports orgs, and crypto ecosystems—often as the founding operator or incubator tasked to will an opportunity from 0 to 1. Along the way, I’ve had two ventures acquired, contributed to multiple ecosystems as an advisor or contributor, and led teams that shipped products across gaming, fintech, and Web3.</p>
 
