--- a/index.html
+++ b/index.html
@@ -33,13 +33,15 @@
 
 <p><strong>Ahensya is my personal advisory and contributor practice.</strong></p>
 
-<p>A high-context, hands-on firm built on first-principles thinking, long-term partnerships, and AI agents. I work discretely with founders, family offices, and ecosystem leaders to untangle stagnation and move through crucial inflection points.</p>
+<p>A high-context, hands-on solo firm powered by custom personal ai agents.</p>
+
+<p>I work discretely with founders, family offices, and ecosystem leaders to untangle stagnation and move through crucial inflection points.</p>
 
 <p>Not everyone's cup of tea, I started Ahensya after more than a decade founding creative and production agencies, lean startups, esports orgs, and crypto ecosystems—often as the founding operator or incubator tasked to will an opportunity from 0 to 1. Along the way, I’ve had two ventures acquired, contributed to multiple ecosystems as an advisor or contributor, and led teams that shipped products across gaming, fintech, and Web3.</p>
 
-<p>Most of my work as Ahensya stays off the record. I’ve been tapped by family offices to assess and package capital deployment opportunities. I've repositioned distressed brands aiming for a second life. Sometimes I broker overlooked assets or quietly connect the right buyer to a key product. Other times, I help convert idle assets into cash-flow plays, build new arms within existing businesses, review go-to-market flywheels, or simply stand as a stakeholder’s no BS partner through high-stakes decisions. The contexts vary—but the work always centers on clarity, leverage, and momentum.</p>
+<p>Most of my work at Ahensya stays off the record. I’ve been tapped by family offices to assess and package capital deployment opportunities. I've repositioned distressed brands to achieve success in a second life. Sometimes I broker overlooked assets or  connect the right buyer to a key business. Other times, I help convert idle assets into cash-flow plays, build new arms within existing businesses, rethink go-to-market flywheels, or simply stand as a leaders no BS partner through high-stakes decisions. The contexts vary—but the work always first princples thinking and bias to win.</p>
 
-<p>My clients are sharp but stretched. They don’t need more noise, they need a thought partner and executioner who can match their context and add clarity. Someone who can plug in, get hands-on and to the root of things, and finally, execute. That’s where I come in.</p>
+<p>My clients are sharp but stretched. Skipping the noise, they need a thought partner and executioner who can they can be candid and in the weeds with. Someone who can plug in, get actively to the root of things, and finally, execute. That’s where I come in.</p>
 
 <p>If you’re here, it’s likely because someone in your circle thought we should speak. If this resonates, <a href="mailto:mail@joejosue.com">email me</a>.</p>
 
