--- a/index.html
+++ b/index.html
@@ -47,26 +47,21 @@
 
   <p>A high-context, hands-on solo firm powered by custom personal ai agents.</p>
 
-  <p>I work discretely with founders, family offices, and ecosystem leaders to untangle stagnation and move through
-    crucial inflection points.</p>
+  <p>I work with select founders, teams, and operators on new products, new business units, and high-stakes transitions.</p>
 
   <p>I started Ahensya after more than a decade founding creative and production agencies, lean startups, esports orgs,
     and crypto ecosystems—often as the founding operator or incubator tasked to will an opportunity from 0 to 1.</p>
 
-  <p>Along the way, I’ve had two ventures acquired, served ecosystems as an advisor or operating contributor, and led
-    lean teams that shipped products across gaming, fintech, and Web3.</p>
-
-  <p>Most of my work at Ahensya stays stay off record. I’m tapped by family offices to assess and package capital
-    deployment. I've repositioned distressed brands to achieve success in a second life. I've brokered overlooked assets
-    or connect the right buyer to a key business. Other times, I've converted idle assets into cash-flow plays, build
-    new arms within existing businesses, rethink go-to-market flywheels, or simply (and imo crucially) stand as a
-    leaders no-BS partner through high stakes decisions. The contexts vary—but the work always first princples thinking
-    and bias to win.</p>
+  <p> > Built two startups that have been acquired (one solo): metasports.gg and djinn.app <br>
+> Sectors with experience depth: IP Entertainment (Anime, Comics, Gaming), Fintech, Blockchain, Content Production, 0-1 Growth.
+  </p>
 
   <p>My clients are sharp but self-aware enough to know when to get help. They need someone candid who can get in the
     weeds. Someone who can plug in, get to the root of things, and finally, execute. That’s where I come in.</p>
 
-  <p>If you’re here, it’s likely because someone in your circle thought we should speak. If this resonates, <a
+  <p>Currently: Select Consulting; and AI Pilled -> Agentic Building (Claude Code/Codex, Memory Research, x402 applications, Swarms and Harnesses!)</p>
+
+  <p>Get in touch if you're looking for meaningful 0-1 here:  <a
       href="mailto:mail@joejosue.com">email me</a>.</p>
 
   <p>- Joe J.</p>
