--- a/index.html
+++ b/index.html
@@ -52,14 +52,13 @@
   <p>I started Ahensya after more than a decade founding creative and production agencies, lean startups, esports orgs,
     and crypto ecosystems—often as the founding operator or incubator tasked to will an opportunity from 0 to 1.</p>
 
-  <p> > Built two startups that have been acquired (one solo): metasports.gg and djinn.app <br>
-> Sectors with experience depth: IP Entertainment (Anime, Comics, Gaming), Fintech, Blockchain, Content Production, 0-1 Growth.
-  </p>
+  <p>Unique experience that I bring to clients is having built two startups that have been acquired (one solo): metasports.gg and djinn.app
 
-  <p>My clients are sharp but self-aware enough to know when to get help. They need someone candid who can get in the
-    weeds. Someone who can plug in, get to the root of things, and finally, execute. That’s where I come in.</p>
+  <p>I have experienced 0-1 perational depth in: IP Entertainment (Anime, Comics, Gaming), Fintech, Blockchain, Content Production.</p>
 
-  <p>Currently: Select Consulting; and AI Pilled -> Agentic Building (Claude Code/Codex, Memory Research, x402 applications, Swarms and Harnesses!)</p>
+  <p>Key operational tenets of my work are: lean teams (sub members), high-agency, first-principled discernment.</p>
+
+  <p>Currently: AI Pilled -> Agentic Building (Claude Code/Codex, Memory Research, x402 applications, Swarms, Harnesses)</p>
 
   <p>Get in touch if you're looking for meaningful 0-1 here:  <a
       href="mailto:mail@joejosue.com">email me</a>.</p>
