--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
   <p>I have experienced 0-1 perational depth in: IP Entertainment (Anime, Comics, Gaming), Fintech, Blockchain, Content Production.</p>
 
-  <p>Key operational tenets of my work are: lean teams (sub members), high-agency, first-principled discernment.</p>
+  <p>Key operational tenets of my work: lean teams (sub 5 members), high-agency, first-principled.</p>
 
   <p>Currently: AI Pilled -> Agentic Building (Claude Code/Codex, Memory Research, x402 applications, Swarms, Harnesses)</p>
 
