--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 
   <p>A high-context, hands-on solo firm powered by custom personal ai agents.</p>
 
-  <p>I work with select founders, teams, and operators on new products, new business units, and high-stakes transitions.</p>
+  <p>I work with select founders, teams, and operators on 0-1 for new products, new business units, and high-stakes transitions.</p>
 
-  <p>I started Ahensya after more than a decade founding creative and production agencies, lean startups, esports orgs,
-    and crypto ecosystems—often as the founding operator or incubator tasked to will an opportunity from 0 to 1.</p>
+  <p>I started Ahensya after more than a decade founding lean startups, creative production studios, esports orgs,
+    and crypto ecosystems—often as the founding operator or incubator tasked to will an opportunity from concept to revenue.</p>
 
-  <p>Unique experience that I bring to clients is having built two startups that have been acquired (one solo): metasports.gg and djinn.app
+  <p>Unique experience that I bring is having built two startups that have been acquired (one solo): metasports.gg (acq. 2023) and djinn.app (acq. 2024)
 
-  <p>I have experienced 0-1 perational depth in: IP Entertainment (Anime, Comics, Gaming), Fintech, Blockchain, Content Production.</p>
+  <p>I have experience 0-1 depth in: IP Entertainment, Consumer Tech, Fintech, Blockchain, Content Production.</p>
 
   <p>Key operational tenets of my work: lean teams (sub 5 members), high-agency, first-principled.</p>
 
